- removed no longer necessary factory and validation for aircraft - updated dataseeder - updated tests